# protean

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  ae.py  build-amulet.sh  build-gem5.sh  build-llvm.sh  build-parsec.sh  build-simpoint.sh  build.sh  extract-spec-cpu2006-iso.sh  extract-spec-cpu2017-iso.sh  figure-4.py  figure-6.py  figure-7.py  gem5_se_wrapper.sh  gem5_se_wrapper.sh.in  generate_simpoints.sh  populate.sh  profiling-and-generating-bbv.sh  protean.py  software.py  software.sh  spec.json  sw-insecure.json  table-i.py  table-ii.py  table-iv.py  table-v.py  test-suite-wrapper.sh
bench/: benchspec.json  collect_results.py  create_checkpoints.py  geomean.py  hardware.sh  hw_run_under.py  ignore.txt  normalize.py  overhead_geomean.py  run_experiments.py  shared.py  show-results.sh  show_results.py  software.sh  sum.py  sw_run_under.sh  sw_run_under_checkpoint.sh  sw_run_under_profile.sh
bench-cmake/: config.json  generate.py
bench-doit/: dodo.py
bench-ninja/: bench-ref-int.json  bench-ref.json  bench-test.json  bench-train.json  config.json  generate-stats.py  generate.py  ninja  regenerate-ipcs.py  run-last-simpoints.py  util.py
bench-ninja/blacklist/: 602.txt  605.txt  607.txt  620.txt  623.txt  625.txt
bench-ninja/helpers/: all-defenses.py  annotate-asm.py  bench-ipc.py  calls.py  cumulative-percentage.py  generate-bench-results.py  generate-leaf-results.py  generate-results.py  geomean.py  hist.py  host_results.py  normalize.py  show_results.py  simpoint-converter.py  simpoints.py  taint-primitive-hist.py  taint-primitive-hist.sh  taint-primitive-hist2.py
cryptobench/: bench-unsafe.sh  bench.sh  shared.sh
cryptobench/base/: bench.sh  run-cpt.sh  shared.sh
cryptobench/nst/: bench.sh  run-cpt.sh  run-exp.sh  shared.sh
ctsbench/: Makefile  bench-hacl-chacha20.c  bench-hacl-curve25519.c  bench-hacl-poly1305.c  bench-libsodium-salsa20.c  bench-libsodium-sha256.c  bench-openssl-chacha20.c  bench-openssl-curve25519.c  bench-openssl-sha256.c  shared.h
decltab/: CMakeLists.txt  decltab.cc  decltab.hh  main.cc  main2.cc  run.py
docker/: Dockerfile  archive.sh  build.sh  run.sh
gem5/: scons
nctbench/: bench-openssl-bnexp.c  bench-openssl-dh.c  bench-openssl-ecadd.c
pocs/: div.c
pool/: Makefile  pool.h  poolc.c  poolc.c.bak  pools.c  pools.c.bak  util.c  util.h
scripts/: benchmark.py  generate-kvm-spec.py
sim/: CMakeLists.txt  generate_lit_cfg.py  generate_runscripts.py  geomean.py  restore_checkpoints.py  separate_tests.py
templates/: section-ix-a.tex.in  table-i.tex.in  table-ii.tex.in  table-iv.tex.in  table-v.tex.in
tools/: AccessSizes.cpp  CMakeLists.txt  Checkpointer.cpp  DeclassificationCache.h  DeclassificationQueue.h  DeclassificationTable.h  Declassify.cpp  Declassify.cpp.bak  Declassify.h  DeclassifySim.h  DictionaryDeclassificationTable.h  EvictionPolicy.h  FrameForwarding.cpp  GraduatingDeclassificationCache.h  Hello.cpp  Malloc.cpp  MiscRegs.h  MultiGranularityDeclassificationCache.h  MultiLevelDeclassificationTable.h  MultiLevelPatternDeclassificationTable.h  ParallelDeclassificationTable.h  ParallelMultiGranularityDeclassificationCache.h  PatternDeclassificationTable.h  ProtectedCache.h  RFSizes.cpp  ScanQueue.h  SetDeclassifiedTrackerTable.h  ShadowCache.h  ShadowDeclassificationTable.h  ShadowMemory.h  SharedMultiGranularityDeclassificationTable.h  Test.cpp  Test2.cpp  Trace.h  Train.cpp  TrainRuntime.c  Util.h  UtilityTracker.h  Vsyscall.h  bbtrace.cpp  (+9 more)
tools/cmake/: IntelPin.cmake  PinTool.cmake  PinTool2.cmake
tools/tests/train/: CMakeLists.txt  calloc.c  malloc.c  realloc.c  reallocarray.c
util/: bench.py  class_specific.py  suite.py  util.py
wasmbench/: bench2.sh  shared.sh
webservbench/: bench.c  run.py
